<resources>
    <string name="app_name">MoviesApplication</string>
    <string name="refresh_text">به روز رسانی</string>
    <string name="title">موضوع :</string>
    <string name="year">سال ساخت :</string>
    <string name="country">کشور سازنده :</string>
    <string name="rating">امتیاز فیلم :</string>
    <string name="genres">ژانر</string>
    <string name="app_no_internet_msg">اینترنت شما غیر فعال است</string>
    <string name="rated">رتبه :</string>
    <string name="released_date">تاریخ انتشار :</string>
    <string name="runtime">مدت زمان :</string>
    <string name="about_writer">درباره نویسنده و کارگردان</string>
    <string name="director">کارگردان :</string>
    <string name="writer">نویسنده :</string>
    <string name="actors">بازیگران :</string>
    <string name="plot">طراح :</string>
    <string name="rating_score">رتبه و ارزش فیلم</string>
    <string name="imdb_rating"> رتبه در سایت imdb :</string>
    <string name="imdb_votes">تعداد رای سایت imdb :</string>
    <string name="imdb_id">شناسه imdb :</string>
    <string name="type">نوع محصول :</string>
    <string name="awards">جوایز :</string>
    <string name="meta_score">امتیاز متا :</string>
    <string name="search_movies">جستجو فیلم</string>
    <string name="movie_name">نام فیلم</string>
    <string name="imdb_text">شناسه‌ی فیلم در سایت IMDB</string>
    <string name="poster">پوستر فیلم</string>
    <string name="add_movie">اضافه کردن فیلم</string>
    <string name="email">ایمیل :</string>
    <string name="password">رمز عبور</string>
    <string name="fullname">نام و نام خانوادگی</string>
    <string name="register">ثبت نام</string>
    <string name="login">ورود به حساب کاربری</string>
    <string name="username">نام کاربری</string>
    <string name="login_text">ورود</string>
    <string name="user_profile">پروفایل شما</string>
    <string name="name">نام :</string>
    <string name="created_at">تاریخ ثبت نام</string>
    <string name="close">بستن</string>
    <string name="update_at">تاریخ آپدیت</string>
</resources>