<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/cv_movies"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_poster"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/tv_year"
            app:layout_constraintTop_toTopOf="@+id/lbl_title"
            tools:text="@tools:sample/first_names" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/year"
            app:layout_constraintEnd_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/lbl_year"
            app:layout_constraintTop_toTopOf="@+id/lbl_year"
            tools:text="@tools:sample/date/ddmmyy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/country"
            app:layout_constraintEnd_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/lbl_year" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/lbl_year"
            app:layout_constraintTop_toBottomOf="@+id/lbl_year"
            tools:text="@tools:sample/date/ddmmyy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/rating"
            app:layout_constraintEnd_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/lbl_country" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/lbl_year"
            app:layout_constraintTop_toBottomOf="@+id/lbl_country"
            tools:text="@tools:sample/cities" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/genres"
            app:layout_constraintEnd_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/lbl_rating" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/lbl_year"
            app:layout_constraintTop_toBottomOf="@+id/lbl_rating"
            tools:text="@tools:sample/cities" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>